--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services: 
     url-shortener:
-        build: .
+        build: ./url_shortener
+        ports:
+            - 5000:80
         env_file: database.conf
         environment:
             WAIT_HOSTS: db:5432
@@ -12,18 +14,15 @@ services:
         depends_on: 
             - db
         volumes:
-            - .:/usr/src/app
-        ports:
-            - 5000:80
+            - ./url_shortener:/usr/src/app
     db:
-        container_name: postgres
+        image: postgres:11
+        ports:
+            - 5432:5432
+        env_file: database.conf
         environment:
             POSTGRES_DB: example
             POSTGRES_USER: test
             POSTGRES_PASSWORD: password
-        env_file: database.conf
-        image: postgres:11
-        ports:
-            - 5432:5432
         volumes:
             - ./postgres-data:/var/lib/postgresql/data
